chapter4 finished